--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ data/raw/offline.final.trace.txt
 offline.final.trace.txt
 reports/BHallum_RShuhart_Unit6CaseStudy.nb.html
 ~$it6_CaseStudy.docx
+*.pdf
